Style search bar to fix malalignment

--- a/src/styles/ForecastSummary.css
+++ b/src/styles/ForecastSummary.css
@@ -37,6 +37,7 @@
 }
 
 .button > a {
+  color: black;
   text-decoration: none;
 }
 
