--- a/src/styles/SearchForm.css
+++ b/src/styles/SearchForm.css
@@ -3,15 +3,14 @@
   justify-content: center;
   margin-top: 0.5rem;
   margin-bottom: 2rem;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
-    "Helvetica Neue", sans-serif;
 }
 
 .input-field {
   width: 8rem;
   font-size: 1rem;
-  line-height: 20px;
   border: 1px solid #e5e4e2;
+  display: inline-block;
+  box-sizing: border-box;
 }
 
 .search-button {
@@ -22,8 +21,8 @@
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
-  font-weight: 200;
-  line-height: 20px;
+  font-weight: 300;
+
   margin: 0;
   outline: none;
   position: relative;
